Fix: Added gap between title and move to list button

--- a/src/app/[locale]/dashboard/flashcard/list/[collectionId]/section/[sectionId]/Flashcard.module.scss
+++ b/src/app/[locale]/dashboard/flashcard/list/[collectionId]/section/[sectionId]/Flashcard.module.scss
@@ -5,7 +5,7 @@
   lg:min-h-[calc(100vh-97px-81px)];
 
   .top {
-    @apply flex justify-between;
+    @apply flex justify-between gap-4;
   }
 
   .flashcard-slider {
